accelerated-domains: add vista-china.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82693,6 +82693,7 @@ server=/visionunion.com/114.114.114.114
 server=/visionvera.com/114.114.114.114
 server=/visitsz.com/114.114.114.114
 server=/viskem.com/114.114.114.114
+server=/vista-china.net/114.114.114.114
 server=/vista123.com/114.114.114.114
 server=/vistastory.com/114.114.114.114
 server=/visualchina.com/114.114.114.114
