--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61017,6 +61017,7 @@ server=/nch-bg.com/114.114.114.114
 server=/nchq.cc/114.114.114.114
 server=/nchte.com/114.114.114.114
 server=/nchtech.com/114.114.114.114
+server=/ncidbj.com/114.114.114.114
 server=/nciyuan.com/114.114.114.114
 server=/ncmbio.com/114.114.114.114
 server=/ncmem.com/114.114.114.114
