--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65322,6 +65322,7 @@ server=/pkulaws.com/114.114.114.114
 server=/pkulb.com/114.114.114.114
 server=/pkuncii.com/114.114.114.114
 server=/pkunn.com/114.114.114.114
+server=/pkuph.com/114.114.114.114
 server=/pkuphqd.com/114.114.114.114
 server=/pkupuzzle.art/114.114.114.114
 server=/pkurc.com/114.114.114.114
