--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14905,6 +14905,7 @@ server=/bjagro.com/114.114.114.114
 server=/bjaja.com/114.114.114.114
 server=/bjartmuseum.com/114.114.114.114
 server=/bjatv.com/114.114.114.114
+server=/bjbaidianfeng.com/114.114.114.114
 server=/bjbalb.com/114.114.114.114
 server=/bjbaodao.net/114.114.114.114
 server=/bjbdsm.com/114.114.114.114
