accelerated-domains: add cimingbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20532,6 +20532,7 @@ server=/ciming-bj.com/114.114.114.114
 server=/ciming-sh.com/114.114.114.114
 server=/ciming.com/114.114.114.114
 server=/cimingaoya.com/114.114.114.114
+server=/cimingbj.com/114.114.114.114
 server=/cimingsy.com/114.114.114.114
 server=/cimsic.com/114.114.114.114
 server=/cimtshow.com/114.114.114.114
