--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51754,6 +51754,7 @@ server=/kmyanyou.com/114.114.114.114
 server=/kmyestar.com/114.114.114.114
 server=/kmyzzx.com/114.114.114.114
 server=/kmzscc.com/114.114.114.114
+server=/kmzx.com/114.114.114.114
 server=/kmzx.org/114.114.114.114
 server=/kn-nanjing.com/114.114.114.114
 server=/kn120.com/114.114.114.114
