accelerated-domains: add ajuhao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10373,6 +10373,7 @@ server=/ajrcb.com/114.114.114.114
 server=/ajs-app.com/114.114.114.114
 server=/ajs17.com/114.114.114.114
 server=/ajtmy.com/114.114.114.114
+server=/ajuhao.com/114.114.114.114
 server=/ajwang.com/114.114.114.114
 server=/ajyg.com/114.114.114.114
 server=/ajylqio.com/114.114.114.114
