--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47424,6 +47424,7 @@ server=/jiang11.com/114.114.114.114
 server=/jiang7.com/114.114.114.114
 server=/jiangbeijituan.com/114.114.114.114
 server=/jiangbeishuicheng.com/114.114.114.114
+server=/jiangbeiyiyuan.com/114.114.114.114
 server=/jiangbeiyiyuan.net/114.114.114.114
 server=/jiangchaochina.com/114.114.114.114
 server=/jiangcp.com/114.114.114.114
