accelerated-domains: add njtrh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61964,6 +61964,7 @@ server=/njtoyo.com/114.114.114.114
 server=/njtqw.com/114.114.114.114
 server=/njtrabon.com/114.114.114.114
 server=/njtransplant.com/114.114.114.114
+server=/njtrh.com/114.114.114.114
 server=/njtst.com/114.114.114.114
 server=/njuftp.org/114.114.114.114
 server=/njustar.com/114.114.114.114
