--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49640,6 +49640,7 @@ server=/jsw118.com/114.114.114.114
 server=/jsw988.com/114.114.114.114
 server=/jswater.net/114.114.114.114
 server=/jswb.com/114.114.114.114
+server=/jswch.net/114.114.114.114
 server=/jswebcall.com/114.114.114.114
 server=/jsweixiu.com/114.114.114.114
 server=/jswel.com/114.114.114.114
