--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57539,6 +57539,7 @@ server=/maxiang.info/114.114.114.114
 server=/maxiang.io/114.114.114.114
 server=/maxiaobang.com/114.114.114.114
 server=/maxiaoxin.net/114.114.114.114
+server=/maximajt.com/114.114.114.114
 server=/maximfiber.com/114.114.114.114
 server=/maxing128.com/114.114.114.114
 server=/maxitas.com/114.114.114.114
