accelerated-domains: add medical-union.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57784,6 +57784,7 @@ server=/mediatek.com/114.114.114.114
 server=/mediav.com/114.114.114.114
 server=/mediavorous.com/114.114.114.114
 server=/mediaxinan.com/114.114.114.114
+server=/medical-union.com/114.114.114.114
 server=/medicalqc.com/114.114.114.114
 server=/medicexam.net/114.114.114.114
 server=/mediecogroup.com/114.114.114.114
