accelerated-domains: add njhmmr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61831,6 +61831,7 @@ server=/njhgame.com/114.114.114.114
 server=/njhipower.com/114.114.114.114
 server=/njhjgs.com/114.114.114.114
 server=/njhkyq.com/114.114.114.114
+server=/njhmmr.com/114.114.114.114
 server=/njhnzx.com/114.114.114.114
 server=/njhonest.com/114.114.114.114
 server=/njhongya.com/114.114.114.114
