--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80162,6 +80162,7 @@ server=/triring.com/114.114.114.114
 server=/triton-games.com/114.114.114.114
 server=/tritoninfo.net/114.114.114.114
 server=/trizinfo.tech/114.114.114.114
+server=/trizmed.com/114.114.114.114
 server=/trjcn.com/114.114.114.114
 server=/trjcn.net/114.114.114.114
 server=/trjddq.com/114.114.114.114
