accelerated-domains: add njhdzy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61827,6 +61827,7 @@ server=/njhctest.com/114.114.114.114
 server=/njhcyq.com/114.114.114.114
 server=/njhd025.com/114.114.114.114
 server=/njhddl.com/114.114.114.114
+server=/njhdzy.com/114.114.114.114
 server=/njhengyou.com/114.114.114.114
 server=/njhgame.com/114.114.114.114
 server=/njhipower.com/114.114.114.114
