accelerated-domains: add hm025.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40839,6 +40839,7 @@ server=/hlzaojia.com/114.114.114.114
 server=/hlzq.com/114.114.114.114
 server=/hlzqgs.com/114.114.114.114
 server=/hm-3223.net/114.114.114.114
+server=/hm025.com/114.114.114.114
 server=/hm120.com/114.114.114.114
 server=/hm152n.com/114.114.114.114
 server=/hm16888.net/114.114.114.114
