--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89037,6 +89037,7 @@ server=/xinxiaochina.com/114.114.114.114
 server=/xinxiaodian.com/114.114.114.114
 server=/xinxiaoqi.com/114.114.114.114
 server=/xinxiaozu.com/114.114.114.114
+server=/xinxiehe.com/114.114.114.114
 server=/xinxifabu.net/114.114.114.114
 server=/xinxinapp.net/114.114.114.114
 server=/xinxindai.com/114.114.114.114
