--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20504,6 +20504,7 @@ server=/cihexpo.com/114.114.114.114
 server=/cihua.net/114.114.114.114
 server=/ciia-top.com/114.114.114.114
 server=/ciicgat.com/114.114.114.114
+server=/ciicjs.com/114.114.114.114
 server=/ciicsh.com/114.114.114.114
 server=/ciie.org/114.114.114.114
 server=/ciif-expo.com/114.114.114.114
