--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96414,6 +96414,7 @@ server=/zgjscopper.com/114.114.114.114
 server=/zgjsdsj.com/114.114.114.114
 server=/zgjsks.com/114.114.114.114
 server=/zgjsqw.com/114.114.114.114
+server=/zgjsyw.com/114.114.114.114
 server=/zgjt518.com/114.114.114.114
 server=/zgjtb.com/114.114.114.114
 server=/zgjxcad.com/114.114.114.114
