accelerated-domains: add ayoushu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12462,6 +12462,7 @@ server=/aykj.net/114.114.114.114
 server=/aymhsy.com/114.114.114.114
 server=/aymym.com/114.114.114.114
 server=/ayok.xyz/114.114.114.114
+server=/ayoushu.com/114.114.114.114
 server=/ayqy.net/114.114.114.114
 server=/ayrbs.com/114.114.114.114
 server=/ayrmt.com/114.114.114.114
