--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61770,6 +61770,7 @@ server=/njc100.com/114.114.114.114
 server=/njcdata.com/114.114.114.114
 server=/njcedu.com/114.114.114.114
 server=/njcgs.com/114.114.114.114
+server=/njchanke.com/114.114.114.114
 server=/njchina.com/114.114.114.114
 server=/njcitygas.com/114.114.114.114
 server=/njcjby.com/114.114.114.114
