accelerated-domains: add njhbyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61827,6 +61827,7 @@ server=/njgulan.com/114.114.114.114
 server=/njguochu.com/114.114.114.114
 server=/njgyjx.com/114.114.114.114
 server=/njgzm.com/114.114.114.114
+server=/njhbyl.com/114.114.114.114
 server=/njhctest.com/114.114.114.114
 server=/njhcyq.com/114.114.114.114
 server=/njhd025.com/114.114.114.114
