--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40006,6 +40006,7 @@ server=/hexian.ltd/114.114.114.114
 server=/hexianrc.com/114.114.114.114
 server=/hexiaoxiang.com/114.114.114.114
 server=/hexicomtech.com/114.114.114.114
+server=/hexie.cc/114.114.114.114
 server=/hexieshaanxi.com/114.114.114.114
 server=/hexilai.com/114.114.114.114
 server=/hexindai.com/114.114.114.114
