accelerated-domains: add jyrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50435,6 +50435,7 @@ server=/jyqxz2015.com/114.114.114.114
 server=/jyrd.com/114.114.114.114
 server=/jyrlzy.com/114.114.114.114
 server=/jyrmtzx.com/114.114.114.114
+server=/jyrmyy.com/114.114.114.114
 server=/jyrq.net/114.114.114.114
 server=/jys0755.com/114.114.114.114
 server=/jys6z.com/114.114.114.114
