--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84886,6 +84886,7 @@ server=/wh12345szzx.com/114.114.114.114
 server=/wh20zx.com/114.114.114.114
 server=/wh2work.com/114.114.114.114
 server=/wh50.com/114.114.114.114
+server=/wh6yy.com/114.114.114.114
 server=/wh6z.com/114.114.114.114
 server=/wh702g.ren/114.114.114.114
 server=/whairport.com/114.114.114.114
