--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84979,6 +84979,7 @@ server=/whghjt.com/114.114.114.114
 server=/whgjzt.com/114.114.114.114
 server=/whgk.com/114.114.114.114
 server=/whgmbwg.com/114.114.114.114
+server=/whgnyy.com/114.114.114.114
 server=/whgtgh.com/114.114.114.114
 server=/whguanshan.com/114.114.114.114
 server=/whguo.com/114.114.114.114
