accelerated-domains: add whkjdxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85046,6 +85046,7 @@ server=/whkakaxi.com/114.114.114.114
 server=/whkc.com/114.114.114.114
 server=/whkcy.com/114.114.114.114
 server=/whkingdom.com/114.114.114.114
+server=/whkjdxyy.com/114.114.114.114
 server=/whkjz.com/114.114.114.114
 server=/whkpcnc.com/114.114.114.114
 server=/whkykj.com/114.114.114.114
