--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86401,6 +86401,7 @@ server=/wuhanhexin.com/114.114.114.114
 server=/wuhanins.com/114.114.114.114
 server=/wuhanjingce.com/114.114.114.114
 server=/wuhankb.com/114.114.114.114
+server=/wuhankq.com/114.114.114.114
 server=/wuhanlanqing.com/114.114.114.114
 server=/wuhanlengji.com/114.114.114.114
 server=/wuhanly.com/114.114.114.114
