accelerated-domains: add whsjytyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85118,6 +85118,7 @@ server=/whsdzckm.com/114.114.114.114
 server=/whsgj.com/114.114.114.114
 server=/whsir.com/114.114.114.114
 server=/whsjfs.com/114.114.114.114
+server=/whsjytyy.com/114.114.114.114
 server=/whskq.com/114.114.114.114
 server=/whsladz.com/114.114.114.114
 server=/whsladz.net/114.114.114.114
