--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40923,6 +40923,7 @@ server=/hnbljy.com/114.114.114.114
 server=/hnblly.com/114.114.114.114
 server=/hnbntv.com/114.114.114.114
 server=/hnbrush.com/114.114.114.114
+server=/hnbsq.com/114.114.114.114
 server=/hnbszsgs.com/114.114.114.114
 server=/hnbwsd.com/114.114.114.114
 server=/hnbzwy.com/114.114.114.114
