--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39160,6 +39160,7 @@ server=/hbpch.com/114.114.114.114
 server=/hbpengxi.com/114.114.114.114
 server=/hbpic5.com/114.114.114.114
 server=/hbpictures.com/114.114.114.114
+server=/hbpryy.com/114.114.114.114
 server=/hbptzsbw.com/114.114.114.114
 server=/hbpukang.com/114.114.114.114
 server=/hbpx.net/114.114.114.114
