accelerated-domains: add whkxzl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85051,6 +85051,7 @@ server=/whkingdom.com/114.114.114.114
 server=/whkjdxyy.com/114.114.114.114
 server=/whkjz.com/114.114.114.114
 server=/whkpcnc.com/114.114.114.114
+server=/whkxzl.com/114.114.114.114
 server=/whkykj.com/114.114.114.114
 server=/whlabor.com/114.114.114.114
 server=/whland.com/114.114.114.114
