--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97719,6 +97719,7 @@ server=/zhuangkou.com/114.114.114.114
 server=/zhuangku.com/114.114.114.114
 server=/zhuangpeitu.com/114.114.114.114
 server=/zhuangpin.com/114.114.114.114
+server=/zhuangshengsheng.com/114.114.114.114
 server=/zhuangxiang.cc/114.114.114.114
 server=/zhuangxiaomi.com/114.114.114.114
 server=/zhuangxiu.com/114.114.114.114
