accelerated-domains: add hbrmhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39181,6 +39181,7 @@ server=/hbrd.net/114.114.114.114
 server=/hbrebond.com/114.114.114.114
 server=/hbrfxh.com/114.114.114.114
 server=/hbriso.com/114.114.114.114
+server=/hbrmhospital.com/114.114.114.114
 server=/hbrsks.co/114.114.114.114
 server=/hbruiao.com/114.114.114.114
 server=/hbruicai.com/114.114.114.114
