accelerated-domains: add whabl.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84892,6 +84892,7 @@ server=/wh50.com/114.114.114.114
 server=/wh6yy.com/114.114.114.114
 server=/wh6z.com/114.114.114.114
 server=/wh702g.ren/114.114.114.114
+server=/whabl.net/114.114.114.114
 server=/whairport.com/114.114.114.114
 server=/whakll.com/114.114.114.114
 server=/whale123.com/114.114.114.114
