--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39097,6 +39097,7 @@ server=/hbicpa.org/114.114.114.114
 server=/hbidc.net/114.114.114.114
 server=/hbifeng.com/114.114.114.114
 server=/hbinitiate.com/114.114.114.114
+server=/hbipdc.com/114.114.114.114
 server=/hbisv.com/114.114.114.114
 server=/hbjcgjg.com/114.114.114.114
 server=/hbjcgy.com/114.114.114.114
