accelerated-domains: add whsgyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85124,6 +85124,7 @@ server=/whrtmpay.com/114.114.114.114
 server=/whsdsyy.com/114.114.114.114
 server=/whsdzckm.com/114.114.114.114
 server=/whsgj.com/114.114.114.114
+server=/whsgyy.com/114.114.114.114
 server=/whsir.com/114.114.114.114
 server=/whsjfs.com/114.114.114.114
 server=/whsjytyy.com/114.114.114.114
