--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83995,6 +83995,7 @@ server=/wdy33.com/114.114.114.114
 server=/wdy44.com/114.114.114.114
 server=/wdyiyuan.com/114.114.114.114
 server=/wdyxgames.com/114.114.114.114
+server=/wdyy.com/114.114.114.114
 server=/wdzj.com/114.114.114.114
 server=/wdzx.com/114.114.114.114
 server=/we.com/114.114.114.114
