accelerated-domains: add whmzkf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85084,6 +85084,7 @@ server=/whmoocs.com/114.114.114.114
 server=/whmxrj.com/114.114.114.114
 server=/whmylike.cc/114.114.114.114
 server=/whmylikekq.com/114.114.114.114
+server=/whmzkf.com/114.114.114.114
 server=/whnewcando.com/114.114.114.114
 server=/whnfc.com/114.114.114.114
 server=/who.cx/114.114.114.114
