--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98664,6 +98664,7 @@ server=/zlkb.net/114.114.114.114
 server=/zlketang.com/114.114.114.114
 server=/zlkj123.com/114.114.114.114
 server=/zlm4.com/114.114.114.114
+server=/zlnewlife.com/114.114.114.114
 server=/zlongad.com/114.114.114.114
 server=/zlongame.com/114.114.114.114
 server=/zlook.com/114.114.114.114
