--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87002,6 +87002,7 @@ server=/wzlingyun.com/114.114.114.114
 server=/wzlyqy.com/114.114.114.114
 server=/wzlysz.com/114.114.114.114
 server=/wzm.com/114.114.114.114
+server=/wzmryy.com/114.114.114.114
 server=/wznas.com/114.114.114.114
 server=/wznthg.com/114.114.114.114
 server=/wzoka.com/114.114.114.114
