accelerated-domains: add whhxyk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85015,6 +85015,7 @@ server=/whhuatian.com/114.114.114.114
 server=/whhuiyu.com/114.114.114.114
 server=/whhxi.com/114.114.114.114
 server=/whhxnz.com/114.114.114.114
+server=/whhxyk.com/114.114.114.114
 server=/whhysound.com/114.114.114.114
 server=/whhyyy.com/114.114.114.114
 server=/whhzhn.com/114.114.114.114
