accelerated-domains: add whzjzxy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85236,6 +85236,7 @@ server=/whzhtd.com/114.114.114.114
 server=/whzhuoyuan.com/114.114.114.114
 server=/whzhzxmr.com/114.114.114.114
 server=/whzjyy.com/114.114.114.114
+server=/whzjzxy.com/114.114.114.114
 server=/whzkb.com/114.114.114.114
 server=/whzph.com/114.114.114.114
 server=/whzsrc.com/114.114.114.114
