--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27509,6 +27509,7 @@ server=/dxzx.com/114.114.114.114
 server=/dxzy163.com/114.114.114.114
 server=/dxzzd.com/114.114.114.114
 server=/dy-bus.com/114.114.114.114
+server=/dy-hospital.com/114.114.114.114
 server=/dy1108.com/114.114.114.114
 server=/dy163.cc/114.114.114.114
 server=/dy172.com/114.114.114.114
