accelerated-domains: add whcjkq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84943,6 +84943,7 @@ server=/whcgtx.com/114.114.114.114
 server=/whchip.com/114.114.114.114
 server=/whcjfc.com/114.114.114.114
 server=/whcjfq.com/114.114.114.114
+server=/whcjkq.com/114.114.114.114
 server=/whckxx.com/114.114.114.114
 server=/whcotton.com/114.114.114.114
 server=/whcqedu.com/114.114.114.114
