--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85584,6 +85584,7 @@ server=/wkbins.com/114.114.114.114
 server=/wkbrowser.com/114.114.114.114
 server=/wkcmall.com/114.114.114.114
 server=/wkcw.net/114.114.114.114
+server=/wkddkyy.com/114.114.114.114
 server=/wkderp.com/114.114.114.114
 server=/wkdty.com/114.114.114.114
 server=/wkepu.com/114.114.114.114
