--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85128,6 +85128,7 @@ server=/whrl.net/114.114.114.114
 server=/whrsip.com/114.114.114.114
 server=/whrszx.com/114.114.114.114
 server=/whrtmpay.com/114.114.114.114
+server=/whsdhyy.com/114.114.114.114
 server=/whsdsyy.com/114.114.114.114
 server=/whsdzckm.com/114.114.114.114
 server=/whsgj.com/114.114.114.114
