--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51097,6 +51097,7 @@ server=/kdweibo.com/114.114.114.114
 server=/kdx.mobi/114.114.114.114
 server=/kdzwy.com/114.114.114.114
 server=/kdzxedu.com/114.114.114.114
+server=/kdzyy.net/114.114.114.114
 server=/ke.com/114.114.114.114
 server=/ke51.com/114.114.114.114
 server=/ke6.com/114.114.114.114
