--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85197,6 +85197,7 @@ server=/whwuyan.com/114.114.114.114
 server=/whwx2018.com/114.114.114.114
 server=/whwxxy.com/114.114.114.114
 server=/whwybg.com/114.114.114.114
+server=/whwz.com/114.114.114.114
 server=/whxcy.com/114.114.114.114
 server=/whxh.com/114.114.114.114
 server=/whxinhuo.com/114.114.114.114
