accelerated-domains: add hhdna.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40238,6 +40238,7 @@ server=/hhcx-led.com/114.114.114.114
 server=/hhczy.com/114.114.114.114
 server=/hhdglm.com/114.114.114.114
 server=/hhdjc.com/114.114.114.114
+server=/hhdna.net/114.114.114.114
 server=/hhdx120.com/114.114.114.114
 server=/hhfbqzgs.com/114.114.114.114
 server=/hhfdjz.com/114.114.114.114
