accelerated-domains: add hbjieshi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39109,6 +39109,7 @@ server=/hbjdxt.com/114.114.114.114
 server=/hbjhc.com/114.114.114.114
 server=/hbjhpx.com/114.114.114.114
 server=/hbjia.net/114.114.114.114
+server=/hbjieshi.com/114.114.114.114
 server=/hbjinnong.com/114.114.114.114
 server=/hbjinshenglan.com/114.114.114.114
 server=/hbjjrb.com/114.114.114.114
