--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84992,6 +84992,7 @@ server=/whgh1.icu/114.114.114.114
 server=/whghjt.com/114.114.114.114
 server=/whgjzt.com/114.114.114.114
 server=/whgk.com/114.114.114.114
+server=/whglkf.com/114.114.114.114
 server=/whgmbwg.com/114.114.114.114
 server=/whgnyy.com/114.114.114.114
 server=/whgtgh.com/114.114.114.114
