accelerated-domains: add whhztcm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85026,6 +85026,7 @@ server=/whhxyk.com/114.114.114.114
 server=/whhysound.com/114.114.114.114
 server=/whhyyy.com/114.114.114.114
 server=/whhzhn.com/114.114.114.114
+server=/whhztcm.com/114.114.114.114
 server=/whhzyj.com/114.114.114.114
 server=/whib.com/114.114.114.114
 server=/whichmba.net/114.114.114.114
