--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86423,6 +86423,7 @@ server=/wuhaneca.org/114.114.114.114
 server=/wuhanev.com/114.114.114.114
 server=/wuhanfuke120.com/114.114.114.114
 server=/wuhanfukeyy.com/114.114.114.114
+server=/wuhanghyy.com/114.114.114.114
 server=/wuhanhexin.com/114.114.114.114
 server=/wuhanins.com/114.114.114.114
 server=/wuhanjingce.com/114.114.114.114
