--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15846,6 +15846,7 @@ server=/borain.com/114.114.114.114
 server=/borderlessbd.com/114.114.114.114
 server=/borenhospital.com/114.114.114.114
 server=/borlonclan.com/114.114.114.114
+server=/born123.com/114.114.114.114
 server=/borninsummer.com/114.114.114.114
 server=/borpor.com/114.114.114.114
 server=/borscon.com/114.114.114.114
