--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9941,6 +9941,7 @@ server=/aier0771.com/114.114.114.114
 server=/aier0775.com/114.114.114.114
 server=/aierchina.com/114.114.114.114
 server=/aierfano.com/114.114.114.114
+server=/aierhb.com/114.114.114.114
 server=/aierhs.com/114.114.114.114
 server=/aierlz.com/114.114.114.114
 server=/aierpg.com/114.114.114.114
