--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84956,6 +84956,7 @@ server=/whcotton.com/114.114.114.114
 server=/whcqedu.com/114.114.114.114
 server=/whcst.com/114.114.114.114
 server=/whctv.com/114.114.114.114
+server=/whctyynk.com/114.114.114.114
 server=/whcx365.com/114.114.114.114
 server=/whcyit.com/114.114.114.114
 server=/whdayy.com/114.114.114.114
