--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32260,6 +32260,7 @@ server=/gaiyadajidali.com/114.114.114.114
 server=/gaiyazhanlan.com/114.114.114.114
 server=/gaizhui.com/114.114.114.114
 server=/gajerseys.com/114.114.114.114
+server=/gajsk.com/114.114.114.114
 server=/gala-v.com/114.114.114.114
 server=/galaxix.com/114.114.114.114
 server=/galaxy-geely.com/114.114.114.114
