--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85024,6 +85024,7 @@ server=/whhpaccp.com/114.114.114.114
 server=/whhryd.com/114.114.114.114
 server=/whhsg.com/114.114.114.114
 server=/whhuatian.com/114.114.114.114
+server=/whhuayou.com/114.114.114.114
 server=/whhuiyu.com/114.114.114.114
 server=/whhxi.com/114.114.114.114
 server=/whhxnz.com/114.114.114.114
