--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85159,6 +85159,7 @@ server=/whswd.com/114.114.114.114
 server=/whsxsy88.com/114.114.114.114
 server=/whsy.org/114.114.114.114
 server=/whsyy.net/114.114.114.114
+server=/whszniao.com/114.114.114.114
 server=/whtbglass.com/114.114.114.114
 server=/whtbgroup.com/114.114.114.114
 server=/whtbq.com/114.114.114.114
