accelerated-domains: add whunitedvet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85188,6 +85188,7 @@ server=/whudfr.com/114.114.114.114
 server=/whudows.com/114.114.114.114
 server=/whuh.com/114.114.114.114
 server=/whuhzzs.com/114.114.114.114
+server=/whunitedvet.com/114.114.114.114
 server=/whuss.com/114.114.114.114
 server=/whut-px.com/114.114.114.114
 server=/whutech.com/114.114.114.114
