--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86450,6 +86450,7 @@ server=/wuhanpep.com/114.114.114.114
 server=/wuhanport.com/114.114.114.114
 server=/wuhanrt.com/114.114.114.114
 server=/wuhansanzhen.com/114.114.114.114
+server=/wuhanta.com/114.114.114.114
 server=/wuhantianqi114.com/114.114.114.114
 server=/wuhantskj.com/114.114.114.114
 server=/wuhanunion.com/114.114.114.114
