accelerated-domains: add yywiki.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95648,6 +95648,7 @@ server=/yytiflytek.com/114.114.114.114
 server=/yytingli.com/114.114.114.114
 server=/yyuap.com/114.114.114.114
 server=/yywd.com/114.114.114.114
+server=/yywiki.com/114.114.114.114
 server=/yywlsj.com/114.114.114.114
 server=/yywords.com/114.114.114.114
 server=/yywsb.com/114.114.114.114
