--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42581,6 +42581,7 @@ server=/hubashihuo.com/114.114.114.114
 server=/hubcyts.com/114.114.114.114
 server=/hubei88.com/114.114.114.114
 server=/hubeibbs.net/114.114.114.114
+server=/hubeibidding.com/114.114.114.114
 server=/hubeichengji.com/114.114.114.114
 server=/hubeici.com/114.114.114.114
 server=/hubeidaily.net/114.114.114.114
