accelerated-domains: add whtpyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85175,6 +85175,7 @@ server=/whtmhh.com/114.114.114.114
 server=/whtongyun.com/114.114.114.114
 server=/whtongzhou.net/114.114.114.114
 server=/whtpi.com/114.114.114.114
+server=/whtpyy.com/114.114.114.114
 server=/whtran.com/114.114.114.114
 server=/whtryine.com/114.114.114.114
 server=/whtto.com/114.114.114.114
