--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9945,6 +9945,7 @@ server=/aierhb.com/114.114.114.114
 server=/aierhs.com/114.114.114.114
 server=/aierlz.com/114.114.114.114
 server=/aierpg.com/114.114.114.114
+server=/aieryk.com/114.114.114.114
 server=/aierzy.com/114.114.114.114
 server=/aieye8.com/114.114.114.114
 server=/aiezu.com/114.114.114.114
