accelerated-domains: add jzda001.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50509,6 +50509,7 @@ server=/jzclassroom.com/114.114.114.114
 server=/jzcmfw.com/114.114.114.114
 server=/jzcxptm.com/114.114.114.114
 server=/jzd365.com/114.114.114.114
+server=/jzda001.com/114.114.114.114
 server=/jzdaodao.com/114.114.114.114
 server=/jzdlgroup.com/114.114.114.114
 server=/jzdwh.com/114.114.114.114
