--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85064,6 +85064,7 @@ server=/whjksyxx.com/114.114.114.114
 server=/whjldj.com/114.114.114.114
 server=/whjm.com/114.114.114.114
 server=/whjuren.com/114.114.114.114
+server=/whjxbaby.com/114.114.114.114
 server=/whjy.net/114.114.114.114
 server=/whjylh.com/114.114.114.114
 server=/whjyx.com/114.114.114.114
