accelerated-domains: add tjszyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79353,6 +79353,7 @@ server=/tjsjx.com/114.114.114.114
 server=/tjskqyy.com/114.114.114.114
 server=/tjst.net/114.114.114.114
 server=/tjstats.com/114.114.114.114
+server=/tjszyy.com/114.114.114.114
 server=/tjtele.com/114.114.114.114
 server=/tjtjshengtu.com/114.114.114.114
 server=/tjtsxd.com/114.114.114.114
