accelerated-domains: add whtpgbyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85180,6 +85180,7 @@ server=/whtime.net/114.114.114.114
 server=/whtmhh.com/114.114.114.114
 server=/whtongyun.com/114.114.114.114
 server=/whtongzhou.net/114.114.114.114
+server=/whtpgbyy.com/114.114.114.114
 server=/whtpi.com/114.114.114.114
 server=/whtpyy.com/114.114.114.114
 server=/whtran.com/114.114.114.114
