accelerated-domains: add whdsck.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84974,6 +84974,7 @@ server=/whdlkj.com/114.114.114.114
 server=/whdonde.com/114.114.114.114
 server=/whdqhj.com/114.114.114.114
 server=/whdrawing.com/114.114.114.114
+server=/whdsck.com/114.114.114.114
 server=/whdsyy.com/114.114.114.114
 server=/whduanwu.com/114.114.114.114
 server=/whecb.com/114.114.114.114
