accelerated-domains: add yiwuguan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93018,6 +93018,7 @@ server=/yiwubuy.com/114.114.114.114
 server=/yiwufair.com/114.114.114.114
 server=/yiwugo.com/114.114.114.114
 server=/yiwugou.com/114.114.114.114
+server=/yiwuguan.com/114.114.114.114
 server=/yiwuku.com/114.114.114.114
 server=/yiwulianhe.com/114.114.114.114
 server=/yiwutalk.com/114.114.114.114
