accelerated-domains: add tetcm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78501,6 +78501,7 @@ server=/testwaf.com/114.114.114.114
 server=/testwo.com/114.114.114.114
 server=/testxy.com/114.114.114.114
 server=/tesys.online/114.114.114.114
+server=/tetcm.com/114.114.114.114
 server=/tetegu.com/114.114.114.114
 server=/tetrisone.com/114.114.114.114
 server=/tetuijiudian.com/114.114.114.114
