--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39255,6 +39255,7 @@ server=/hbtycp.com/114.114.114.114
 server=/hbweid.com/114.114.114.114
 server=/hbwh.net/114.114.114.114
 server=/hbwhcyw.com/114.114.114.114
+server=/hbwhexpo.com/114.114.114.114
 server=/hbwhjj.com/114.114.114.114
 server=/hbwjs.com/114.114.114.114
 server=/hbwlykt.com/114.114.114.114
