--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84999,6 +84999,7 @@ server=/whflfa.com/114.114.114.114
 server=/whfph.com/114.114.114.114
 server=/whgaodu.com/114.114.114.114
 server=/whgaopeng.com/114.114.114.114
+server=/whgayy.com/114.114.114.114
 server=/whggjk.com/114.114.114.114
 server=/whggjtjs.com/114.114.114.114
 server=/whggvc.net/114.114.114.114
