--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85208,6 +85208,7 @@ server=/whut-px.com/114.114.114.114
 server=/whutech.com/114.114.114.114
 server=/whvkk.com/114.114.114.114
 server=/whvms.com/114.114.114.114
+server=/whw.cc/114.114.114.114
 server=/whwanshun.com/114.114.114.114
 server=/whwat.com/114.114.114.114
 server=/whwater.com/114.114.114.114
