accelerated-domains: add hb-jn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38985,6 +38985,7 @@ server=/hb-163.com/114.114.114.114
 server=/hb-ecloud.com/114.114.114.114
 server=/hb-green.com/114.114.114.114
 server=/hb-hengda.com/114.114.114.114
+server=/hb-jn.com/114.114.114.114
 server=/hb-ly.com/114.114.114.114
 server=/hb-water.com/114.114.114.114
 server=/hb-ws.com/114.114.114.114
