--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70133,6 +70133,7 @@ server=/ruiying3d.com/114.114.114.114
 server=/ruiyingkeji.com/114.114.114.114
 server=/ruiyuanobserve.com/114.114.114.114
 server=/ruiyunit.com/114.114.114.114
+server=/ruizhipak.com/114.114.114.114
 server=/ruizim.com/114.114.114.114
 server=/ruizong-gz.com/114.114.114.114
 server=/rujiazg.com/114.114.114.114
