accelerated-domains: add pr027.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65851,6 +65851,7 @@ server=/pqyhigh.com/114.114.114.114
 server=/pqylow.com/114.114.114.114
 server=/pqymiddle.com/114.114.114.114
 server=/pqzhichan.com/114.114.114.114
+server=/pr027.com/114.114.114.114
 server=/pr0771.com/114.114.114.114
 server=/pr1bg.com/114.114.114.114
 server=/pradabao.com/114.114.114.114
