accelerated-domains: add whjh120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85067,6 +85067,7 @@ server=/whitjy.com/114.114.114.114
 server=/whjbh.com/114.114.114.114
 server=/whjclgs.com/114.114.114.114
 server=/whjcly.com/114.114.114.114
+server=/whjh120.com/114.114.114.114
 server=/whjhb.org/114.114.114.114
 server=/whjiaoy.com/114.114.114.114
 server=/whjjhbj.com/114.114.114.114
