--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37964,6 +37964,7 @@ server=/gzysbpay.com/114.114.114.114
 server=/gzyucai.com/114.114.114.114
 server=/gzyxls.com/114.114.114.114
 server=/gzyxtech.com/114.114.114.114
+server=/gzyyma.com/114.114.114.114
 server=/gzyz699.com/114.114.114.114
 server=/gzzarts.com/114.114.114.114
 server=/gzzhanmei.com/114.114.114.114
