--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32754,6 +32754,7 @@ server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
+server=/gdhtcm.com/114.114.114.114
 server=/gdhwater.com/114.114.114.114
 server=/gdicoou.com/114.114.114.114
 server=/gdie.com/114.114.114.114
