--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37741,6 +37741,7 @@ server=/gzfqyy.com/114.114.114.114
 server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
+server=/gzgayy.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
 server=/gzgljx.com/114.114.114.114
 server=/gzgmjcx.com/114.114.114.114
