--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66216,6 +66216,7 @@ server=/py-axa.com/114.114.114.114
 server=/py1080p.com/114.114.114.114
 server=/py1314.com/114.114.114.114
 server=/py168.com/114.114.114.114
+server=/py2y.com/114.114.114.114
 server=/py3study.com/114.114.114.114
 server=/py94.com/114.114.114.114
 server=/pyadx.com/114.114.114.114
