--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94676,6 +94676,7 @@ server=/yudiangame.vip/114.114.114.114
 server=/yudiaomingjia.com/114.114.114.114
 server=/yudiu.com/114.114.114.114
 server=/yudouyudou.com/114.114.114.114
+server=/yue-grh.com/114.114.114.114
 server=/yue-tao.com/114.114.114.114
 server=/yue365.com/114.114.114.114
 server=/yue7.com/114.114.114.114
