--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32821,6 +32821,7 @@ server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
 server=/gdsdwan.com/114.114.114.114
+server=/gdsdyy.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
 server=/gdshe.org/114.114.114.114
 server=/gdskfz.com/114.114.114.114
