accelerated-domains: add gzcancer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37701,6 +37701,7 @@ server=/gzblssly.com/114.114.114.114
 server=/gzbote.com/114.114.114.114
 server=/gzbt020.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
+server=/gzcancer.com/114.114.114.114
 server=/gzch120.com/114.114.114.114
 server=/gzch12333.com/114.114.114.114
 server=/gzchangke.com/114.114.114.114
