--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37727,6 +37727,7 @@ server=/gzdingyun.com/114.114.114.114
 server=/gzdjy.org/114.114.114.114
 server=/gzdli.com/114.114.114.114
 server=/gzdongmin.com/114.114.114.114
+server=/gzdryy.com/114.114.114.114
 server=/gzdsw.com/114.114.114.114
 server=/gzdtcy168.com/114.114.114.114
 server=/gzduguo.com/114.114.114.114
