--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49731,6 +49731,7 @@ server=/jsyun.cc/114.114.114.114
 server=/jsyunhao.com/114.114.114.114
 server=/jsyxjg.com/114.114.114.114
 server=/jsyxrcb.com/114.114.114.114
+server=/jsz120.com/114.114.114.114
 server=/jszbtb.com/114.114.114.114
 server=/jszc0773.com/114.114.114.114
 server=/jszcny.com/114.114.114.114
