accelerated-domains: add huixinyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42852,6 +42852,7 @@ server=/huixing.hk/114.114.114.114
 server=/huixingsoft.com/114.114.114.114
 server=/huixinli.com/114.114.114.114
 server=/huixinmed.com/114.114.114.114
+server=/huixinyiyuan.com/114.114.114.114
 server=/huixinyt.com/114.114.114.114
 server=/huixinyun.com/114.114.114.114
 server=/huixuanjiasu.com/114.114.114.114
