accelerated-domains: add bys120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16596,6 +16596,7 @@ server=/byr-navi.com/114.114.114.114
 server=/byr.cc/114.114.114.114
 server=/byr.wiki/114.114.114.114
 server=/byrhkj.com/114.114.114.114
+server=/bys120.com/114.114.114.114
 server=/bysb.net/114.114.114.114
 server=/byshr.com/114.114.114.114
 server=/bysocket.com/114.114.114.114
