--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37881,6 +37881,7 @@ server=/gzsj.live/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
+server=/gzsqkfyy.com/114.114.114.114
 server=/gzsrmyy.com/114.114.114.114
 server=/gzsrunda.com/114.114.114.114
 server=/gzssjfs.com/114.114.114.114
