accelerated-domains: add byjd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16572,6 +16572,7 @@ server=/byhlds.com/114.114.114.114
 server=/byhlds.net/114.114.114.114
 server=/byhua.com/114.114.114.114
 server=/byi.pw/114.114.114.114
+server=/byjd.com/114.114.114.114
 server=/byjdxy.com/114.114.114.114
 server=/byjgxy.com/114.114.114.114
 server=/byjsjxy.com/114.114.114.114
