--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37971,6 +37971,7 @@ server=/gzyowin.com/114.114.114.114
 server=/gzyqtlxs.com/114.114.114.114
 server=/gzyqwl.net/114.114.114.114
 server=/gzysbpay.com/114.114.114.114
+server=/gzysnkyy.com/114.114.114.114
 server=/gzyucai.com/114.114.114.114
 server=/gzyxls.com/114.114.114.114
 server=/gzyxtech.com/114.114.114.114
