accelerated-domains: add hpswk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41733,6 +41733,7 @@ server=/hprx.com/114.114.114.114
 server=/hpshuju.com/114.114.114.114
 server=/hpstore-china.com/114.114.114.114
 server=/hpstore.cc/114.114.114.114
+server=/hpswk.com/114.114.114.114
 server=/hptea.com/114.114.114.114
 server=/hpv112.com/114.114.114.114
 server=/hpwjs.com/114.114.114.114
