--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37782,6 +37782,7 @@ server=/gzhygk.com/114.114.114.114
 server=/gzhysy.com/114.114.114.114
 server=/gzhzcj.com/114.114.114.114
 server=/gzidc.com/114.114.114.114
+server=/gzitwm.net/114.114.114.114
 server=/gzj568.com/114.114.114.114
 server=/gzjc2016.com/114.114.114.114
 server=/gzjgpy.com/114.114.114.114
