--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32795,6 +32795,7 @@ server=/gdmm.com/114.114.114.114
 server=/gdmoa.org/114.114.114.114
 server=/gdmschina.com/114.114.114.114
 server=/gdmuah.com/114.114.114.114
+server=/gdmusah.com/114.114.114.114
 server=/gdmuseum.com/114.114.114.114
 server=/gdmztv.com/114.114.114.114
 server=/gdmzw.com/114.114.114.114
