accelerated-domains: add gzhkzyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37770,6 +37770,7 @@ server=/gzhengdou.com/114.114.114.114
 server=/gzhfydgc.com/114.114.114.114
 server=/gzhifi.com/114.114.114.114
 server=/gzhkl.com/114.114.114.114
+server=/gzhkzyyy.com/114.114.114.114
 server=/gzhornet.com/114.114.114.114
 server=/gzhotelgroup.com/114.114.114.114
 server=/gzhphb.com/114.114.114.114
