accelerated-domains: add zxydss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99662,6 +99662,7 @@ server=/zxxmr.com/114.114.114.114
 server=/zxxww.com/114.114.114.114
 server=/zxxxkj.com/114.114.114.114
 server=/zxxyedu.com/114.114.114.114
+server=/zxydss.com/114.114.114.114
 server=/zxyee.com/114.114.114.114
 server=/zxz.ee/114.114.114.114
 server=/zxzhengxin.com/114.114.114.114
