accelerated-domains: add gdylhp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32888,6 +32888,7 @@ server=/gdxycy.com/114.114.114.114
 server=/gdygsk.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
+server=/gdylhp.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
 server=/gdyunyin.net/114.114.114.114
