--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37705,6 +37705,7 @@ server=/gzbio.net/114.114.114.114
 server=/gzblssly.com/114.114.114.114
 server=/gzbote.com/114.114.114.114
 server=/gzbt020.com/114.114.114.114
+server=/gzbyyy.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
 server=/gzcancer.com/114.114.114.114
 server=/gzch120.com/114.114.114.114
