--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33129,6 +33129,7 @@ server=/get233.com/114.114.114.114
 server=/getbs.com/114.114.114.114
 server=/getcai.com/114.114.114.114
 server=/getconnectplus.com/114.114.114.114
+server=/getddhospi.com/114.114.114.114
 server=/getehu.com/114.114.114.114
 server=/getelighting.com/114.114.114.114
 server=/gethover.com/114.114.114.114
