accelerated-domains: add gzhxyyhos.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37784,6 +37784,7 @@ server=/gzhuake.cc/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
 server=/gzhxaq.com/114.114.114.114
+server=/gzhxyyhos.com/114.114.114.114
 server=/gzhygk.com/114.114.114.114
 server=/gzhysy.com/114.114.114.114
 server=/gzhzcj.com/114.114.114.114
