accelerated-domains: add gzjkyljt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37803,6 +37803,7 @@ server=/gzjinsong.com/114.114.114.114
 server=/gzjisikj.com/114.114.114.114
 server=/gzjiunuo.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
+server=/gzjkyljt.com/114.114.114.114
 server=/gzjpad.com/114.114.114.114
 server=/gzjqd.com/114.114.114.114
 server=/gzjsxh.com/114.114.114.114
