--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61476,6 +61476,7 @@ server=/nfyeya.com/114.114.114.114
 server=/nfyny.com/114.114.114.114
 server=/nfyun.vip/114.114.114.114
 server=/nfyy.com/114.114.114.114
+server=/nfyyzcfy.com/114.114.114.114
 server=/nfzhouyi.com/114.114.114.114
 server=/nfzmy.com/114.114.114.114
 server=/nfzzh.com/114.114.114.114
