accelerated-domains: add see100n.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71575,6 +71575,7 @@ server=/secwx.com/114.114.114.114
 server=/secxun.com/114.114.114.114
 server=/see-far.com/114.114.114.114
 server=/see-source.com/114.114.114.114
+server=/see100n.com/114.114.114.114
 server=/seebon.com/114.114.114.114
 server=/seebug.org/114.114.114.114
 server=/seecmedia.net/114.114.114.114
