accelerated-domains: add gzbxyy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37708,6 +37708,7 @@ server=/gzbio.net/114.114.114.114
 server=/gzblssly.com/114.114.114.114
 server=/gzbote.com/114.114.114.114
 server=/gzbt020.com/114.114.114.114
+server=/gzbxyy120.com/114.114.114.114
 server=/gzbyyy.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
 server=/gzcancer.com/114.114.114.114
