--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42555,6 +42555,7 @@ server=/huaxincem.com/114.114.114.114
 server=/huaxing.com/114.114.114.114
 server=/huaxingchem.com/114.114.114.114
 server=/huaxingku.com/114.114.114.114
+server=/huaxinorthop.com/114.114.114.114
 server=/huaxintec.com/114.114.114.114
 server=/huaxinzhuji.com/114.114.114.114
 server=/huaxiong.com/114.114.114.114
