--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92096,6 +92096,7 @@ server=/yespublishers.com/114.114.114.114
 server=/yestar.com/114.114.114.114
 server=/yestar1992.com/114.114.114.114
 server=/yestarcorp.com/114.114.114.114
+server=/yestargz.com/114.114.114.114
 server=/yestarm.com/114.114.114.114
 server=/yestarvip.com/114.114.114.114
 server=/yestehotel.com/114.114.114.114
