--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35467,6 +35467,7 @@ server=/gwyou.com/114.114.114.114
 server=/gwypxw.com/114.114.114.114
 server=/gwyzk.com/114.114.114.114
 server=/gwzft.com/114.114.114.114
+server=/gwzhinan.com/114.114.114.114
 server=/gwzwfw.com/114.114.114.114
 server=/gwzyxh.com/114.114.114.114
 server=/gx-antai.com/114.114.114.114
