accelerated-domains: add gzjkfk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37808,6 +37808,7 @@ server=/gzjingsha.com/114.114.114.114
 server=/gzjinsong.com/114.114.114.114
 server=/gzjisikj.com/114.114.114.114
 server=/gzjiunuo.com/114.114.114.114
+server=/gzjkfk.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
 server=/gzjpad.com/114.114.114.114
