--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37937,6 +37937,7 @@ server=/gztyyedu.com/114.114.114.114
 server=/gztz.org/114.114.114.114
 server=/gztz120.com/114.114.114.114
 server=/gzuc.net/114.114.114.114
+server=/gzucm-yhyy.com/114.114.114.114
 server=/gzuni.com/114.114.114.114
 server=/gzv6.com/114.114.114.114
 server=/gzw.net/114.114.114.114
