--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37921,6 +37921,7 @@ server=/gztcm3.com/114.114.114.114
 server=/gztea.vip/114.114.114.114
 server=/gztfgame.com/114.114.114.114
 server=/gzthrc.com/114.114.114.114
+server=/gzthyy120.com/114.114.114.114
 server=/gztime.cc/114.114.114.114
 server=/gztopkt.com/114.114.114.114
 server=/gztoptour.com/114.114.114.114
