--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49758,6 +49758,7 @@ server=/jsyxrcb.com/114.114.114.114
 server=/jsz120.com/114.114.114.114
 server=/jszbtb.com/114.114.114.114
 server=/jszc0773.com/114.114.114.114
+server=/jszca.com/114.114.114.114
 server=/jszcny.com/114.114.114.114
 server=/jszdlssws.com/114.114.114.114
 server=/jszf.org/114.114.114.114
