accelerated-domains: add rngdyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69683,6 +69683,7 @@ server=/rmzxb.com/114.114.114.114
 server=/rn-core.com/114.114.114.114
 server=/rn-hswh.com/114.114.114.114
 server=/rnfengwo.com/114.114.114.114
+server=/rngdyy.com/114.114.114.114
 server=/rngmoe.com/114.114.114.114
 server=/rngtest.com/114.114.114.114
 server=/rnhy.net/114.114.114.114
