--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37965,6 +37965,7 @@ server=/gzxijiu.com/114.114.114.114
 server=/gzxinfo.com/114.114.114.114
 server=/gzxjgc.com/114.114.114.114
 server=/gzxswh.com/114.114.114.114
+server=/gzxsyy.com/114.114.114.114
 server=/gzxszf.com/114.114.114.114
 server=/gzxulang.com/114.114.114.114
 server=/gzxwtjy.com/114.114.114.114
