--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49779,6 +49779,7 @@ server=/jszmly.com/114.114.114.114
 server=/jszn.ink/114.114.114.114
 server=/jszpw.net/114.114.114.114
 server=/jszygs.com/114.114.114.114
+server=/jszyyguoji.com/114.114.114.114
 server=/jt-it.com/114.114.114.114
 server=/jt120.com/114.114.114.114
 server=/jt56w.com/114.114.114.114
