--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37722,6 +37722,7 @@ server=/gzchangke.com/114.114.114.114
 server=/gzchangzhe.com/114.114.114.114
 server=/gzchj.net/114.114.114.114
 server=/gzchupai.com/114.114.114.114
+server=/gzcihui.com/114.114.114.114
 server=/gzcjjs.com/114.114.114.114
 server=/gzcl999.com/114.114.114.114
 server=/gzcn.net/114.114.114.114
