--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99815,6 +99815,7 @@ server=/zywtc.com/114.114.114.114
 server=/zywvvd.com/114.114.114.114
 server=/zywxgames.com/114.114.114.114
 server=/zywxpress.com/114.114.114.114
+server=/zyxb168.com/114.114.114.114
 server=/zyxhmm.com/114.114.114.114
 server=/zyxr.com/114.114.114.114
 server=/zyxuan.org/114.114.114.114
