--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37785,6 +37785,7 @@ server=/gzhkl.com/114.114.114.114
 server=/gzhkzyyy.com/114.114.114.114
 server=/gzhornet.com/114.114.114.114
 server=/gzhotelgroup.com/114.114.114.114
+server=/gzhpaier.com/114.114.114.114
 server=/gzhphb.com/114.114.114.114
 server=/gzhtdz.com/114.114.114.114
 server=/gzhtinfo.com/114.114.114.114
