accelerated-domains: add concordmedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22280,6 +22280,7 @@ server=/conan06.com/114.114.114.114
 server=/conbagroup.com/114.114.114.114
 server=/conchdate.com/114.114.114.114
 server=/conchdesktop.com/114.114.114.114
+server=/concordmedical.com/114.114.114.114
 server=/concox.net/114.114.114.114
 server=/conele.com/114.114.114.114
 server=/conew.com/114.114.114.114
