accelerated-domains: add gzhuamei.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37792,6 +37792,7 @@ server=/gzhtdz.com/114.114.114.114
 server=/gzhtinfo.com/114.114.114.114
 server=/gzhttp.com/114.114.114.114
 server=/gzhuake.cc/114.114.114.114
+server=/gzhuamei.net/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
 server=/gzhxaq.com/114.114.114.114
