--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57842,6 +57842,7 @@ server=/mecoxlane.com/114.114.114.114
 server=/mecru.com/114.114.114.114
 server=/mecue.cc/114.114.114.114
 server=/med-water.com/114.114.114.114
+server=/med123.com/114.114.114.114
 server=/med126.com/114.114.114.114
 server=/med66.com/114.114.114.114
 server=/meda.cc/114.114.114.114
