--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39930,6 +39930,7 @@ server=/henghe666.com/114.114.114.114
 server=/henghongjixie.com/114.114.114.114
 server=/henghuicjcn.com/114.114.114.114
 server=/hengjiafish.net/114.114.114.114
+server=/hengjianyy.com/114.114.114.114
 server=/hengjiecdn.com/114.114.114.114
 server=/hengjiu-pt.com/114.114.114.114
 server=/hengliguoji.com/114.114.114.114
