accelerated-domains: add gzhx10.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37798,6 +37798,7 @@ server=/gzhuamei.net/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
 server=/gzhx09.com/114.114.114.114
+server=/gzhx10.com/114.114.114.114
 server=/gzhxaq.com/114.114.114.114
 server=/gzhxyyhos.com/114.114.114.114
 server=/gzhygk.com/114.114.114.114
