accelerated-domains: add gzcmer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37729,6 +37729,7 @@ server=/gzchupai.com/114.114.114.114
 server=/gzcihui.com/114.114.114.114
 server=/gzcjjs.com/114.114.114.114
 server=/gzcl999.com/114.114.114.114
+server=/gzcmer.com/114.114.114.114
 server=/gzcn.net/114.114.114.114
 server=/gzcppa.com/114.114.114.114
 server=/gzcsgs.com/114.114.114.114
