accelerated-domains: add smshos.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74703,6 +74703,7 @@ server=/smrmyy.com/114.114.114.114
 server=/sms18.com/114.114.114.114
 server=/sms9.net/114.114.114.114
 server=/smsbao.com/114.114.114.114
+server=/smshos.com/114.114.114.114
 server=/smshx.com/114.114.114.114
 server=/smskb.com/114.114.114.114
 server=/smslkcoffee.com/114.114.114.114
