--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37834,6 +37834,7 @@ server=/gzjvcom.com/114.114.114.114
 server=/gzjykj.com/114.114.114.114
 server=/gzjyypt.com/114.114.114.114
 server=/gzjzc.com/114.114.114.114
+server=/gzkangyuan.com/114.114.114.114
 server=/gzkcsj.com/114.114.114.114
 server=/gzkeeyun.com/114.114.114.114
 server=/gzking.com/114.114.114.114
