accelerated-domains: add gzxdzlyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37970,6 +37970,7 @@ server=/gzwrjt.com/114.114.114.114
 server=/gzwzhw.com/114.114.114.114
 server=/gzxdd.com/114.114.114.114
 server=/gzxdf.com/114.114.114.114
+server=/gzxdzlyy.com/114.114.114.114
 server=/gzxf35.com/114.114.114.114
 server=/gzxianc.com/114.114.114.114
 server=/gzxict.com/114.114.114.114
