--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1193,6 +1193,7 @@ server=/120ask.com/114.114.114.114
 server=/120askimages.com/114.114.114.114
 server=/120bid.com/114.114.114.114
 server=/120btc.com/114.114.114.114
+server=/120cihui.com/114.114.114.114
 server=/120fd.com/114.114.114.114
 server=/120it.com/114.114.114.114
 server=/120jg.com/114.114.114.114
