--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96440,6 +96440,7 @@ server=/zgblh.com/114.114.114.114
 server=/zgbmcl.com/114.114.114.114
 server=/zgbnt.com/114.114.114.114
 server=/zgboke.com/114.114.114.114
+server=/zgbszf.com/114.114.114.114
 server=/zgby114.com/114.114.114.114
 server=/zgbywl.com/114.114.114.114
 server=/zgbzad.com/114.114.114.114
