accelerated-domains: add runboyun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70209,6 +70209,7 @@ server=/rumeibox.com/114.114.114.114
 server=/rumosky.com/114.114.114.114
 server=/rumt-sg.com/114.114.114.114
 server=/rumt-zh.com/114.114.114.114
+server=/runboyun.com/114.114.114.114
 server=/runca.net/114.114.114.114
 server=/runchengjiaxiao.com/114.114.114.114
 server=/runcmd.com/114.114.114.114
