accelerated-domains: add ldzxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53573,6 +53573,7 @@ server=/ldygo.com/114.114.114.114
 server=/ldyh666.com/114.114.114.114
 server=/ldyz365.com/114.114.114.114
 server=/ldzcgs.com/114.114.114.114
+server=/ldzxyy.com/114.114.114.114
 server=/le-feng.com/114.114.114.114
 server=/le-wan.com/114.114.114.114
 server=/le.com/114.114.114.114
