accelerated-domains: add xsjgzbdf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90324,6 +90324,7 @@ server=/xsina.net/114.114.114.114
 server=/xsinger.me/114.114.114.114
 server=/xsj21.com/114.114.114.114
 server=/xsjedu.org/114.114.114.114
+server=/xsjgzbdf.com/114.114.114.114
 server=/xsjit.com/114.114.114.114
 server=/xsjny.com/114.114.114.114
 server=/xsjom.com/114.114.114.114
