--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37623,6 +37623,7 @@ server=/gyip.net/114.114.114.114
 server=/gyjc88.com/114.114.114.114
 server=/gyjiangyuan.com/114.114.114.114
 server=/gykghb.com/114.114.114.114
+server=/gykqyy.com/114.114.114.114
 server=/gylaq.com/114.114.114.114
 server=/gylcxo.xyz/114.114.114.114
 server=/gyljc.com/114.114.114.114
