--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37920,6 +37920,7 @@ server=/gzsrmyy.com/114.114.114.114
 server=/gzsrunda.com/114.114.114.114
 server=/gzssjfs.com/114.114.114.114
 server=/gzssnzx.com/114.114.114.114
+server=/gzssyyy.com/114.114.114.114
 server=/gzstarship.com/114.114.114.114
 server=/gzstv.com/114.114.114.114
 server=/gzstyq.com/114.114.114.114
