--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37906,6 +37906,7 @@ server=/gzrobot.com/114.114.114.114
 server=/gzrobots.com/114.114.114.114
 server=/gzrtnet.com/114.114.114.114
 server=/gzrycl.com/114.114.114.114
+server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzshaudio.com/114.114.114.114
 server=/gzshuangbao.com/114.114.114.114
