--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15626,6 +15626,7 @@ server=/bob.com/114.114.114.114
 server=/bobai520.com/114.114.114.114
 server=/bobaow.com/114.114.114.114
 server=/bobbns.com/114.114.114.114
+server=/bobcare.com/114.114.114.114
 server=/bobcfc.com/114.114.114.114
 server=/bobcoder.cc/114.114.114.114
 server=/bobdirectbank.com/114.114.114.114
