--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37913,6 +37913,7 @@ server=/gzshaudio.com/114.114.114.114
 server=/gzshuangbao.com/114.114.114.114
 server=/gzshuimh.com/114.114.114.114
 server=/gzshujuhui.com/114.114.114.114
+server=/gzshyk.com/114.114.114.114
 server=/gzsj.live/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
