--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37846,6 +37846,7 @@ server=/gzking.com/114.114.114.114
 server=/gzkmring.com/114.114.114.114
 server=/gzkuniu.com/114.114.114.114
 server=/gzkunmao.com/114.114.114.114
+server=/gzkydzyyy.com/114.114.114.114
 server=/gzkz88.com/114.114.114.114
 server=/gzlarc.com/114.114.114.114
 server=/gzlayl.com/114.114.114.114
