--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37951,6 +37951,7 @@ server=/gztoptour.com/114.114.114.114
 server=/gztotem.com/114.114.114.114
 server=/gztowngas.com/114.114.114.114
 server=/gztrseo.com/114.114.114.114
+server=/gztszl.com/114.114.114.114
 server=/gzttjt.com/114.114.114.114
 server=/gztv.com/114.114.114.114
 server=/gztvu.com/114.114.114.114
