--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37767,6 +37767,7 @@ server=/gzfezx.com/114.114.114.114
 server=/gzfin.com/114.114.114.114
 server=/gzfirst.com/114.114.114.114
 server=/gzfjwzhs.com/114.114.114.114
+server=/gzfk01.com/114.114.114.114
 server=/gzfqyy.com/114.114.114.114
 server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
