--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37773,6 +37773,7 @@ server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
 server=/gzgayy.com/114.114.114.114
+server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
 server=/gzgljx.com/114.114.114.114
 server=/gzgmjcx.com/114.114.114.114
