--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37806,6 +37806,7 @@ server=/gzhuake.cc/114.114.114.114
 server=/gzhuamei.net/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
+server=/gzhx04.com/114.114.114.114
 server=/gzhx09.com/114.114.114.114
 server=/gzhx10.com/114.114.114.114
 server=/gzhxaq.com/114.114.114.114
