--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37877,6 +37877,7 @@ server=/gzmpc.com/114.114.114.114
 server=/gzmri.com/114.114.114.114
 server=/gzmtr.com/114.114.114.114
 server=/gzmtrticket.com/114.114.114.114
+server=/gzmylike.com/114.114.114.114
 server=/gznbsyy.com/114.114.114.114
 server=/gzncstudios.com/114.114.114.114
 server=/gznemo.com/114.114.114.114
