--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66187,6 +66187,7 @@ server=/purewhite.io/114.114.114.114
 server=/puronglong.com/114.114.114.114
 server=/purplehi.com/114.114.114.114
 server=/purplelec.com/114.114.114.114
+server=/purui020.com/114.114.114.114
 server=/puruimachinery.com/114.114.114.114
 server=/pusa123.com/114.114.114.114
 server=/pusa365.com/114.114.114.114
