accelerated-domains: add gzthfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37949,6 +37949,7 @@ server=/gztcdj.com/114.114.114.114
 server=/gztcm3.com/114.114.114.114
 server=/gztea.vip/114.114.114.114
 server=/gztfgame.com/114.114.114.114
+server=/gzthfy.com/114.114.114.114
 server=/gzthrc.com/114.114.114.114
 server=/gzthyy120.com/114.114.114.114
 server=/gztime.cc/114.114.114.114
