--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87948,6 +87948,7 @@ server=/xiancaotang.com/114.114.114.114
 server=/xianchengyou.com/114.114.114.114
 server=/xiancn.com/114.114.114.114
 server=/xiandaigangmu.com/114.114.114.114
+server=/xiandaihospital.com/114.114.114.114
 server=/xiandaiyuwen.com/114.114.114.114
 server=/xiandanjia.com/114.114.114.114
 server=/xiandaohu.net/114.114.114.114
