accelerated-domains: add gzmlfcyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37875,6 +37875,7 @@ server=/gzmeichang.com/114.114.114.114
 server=/gzmiden.com/114.114.114.114
 server=/gzmiyuan.com/114.114.114.114
 server=/gzmjhzs.com/114.114.114.114
+server=/gzmlfcyy.com/114.114.114.114
 server=/gzmpc.com/114.114.114.114
 server=/gzmri.com/114.114.114.114
 server=/gzmtr.com/114.114.114.114
