accelerated-domains: add dayihosp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24523,6 +24523,7 @@ server=/dayi100.com/114.114.114.114
 server=/dayichang.com/114.114.114.114
 server=/dayifund.org/114.114.114.114
 server=/dayihangqing.com/114.114.114.114
+server=/dayihosp.com/114.114.114.114
 server=/dayila.net/114.114.114.114
 server=/dayima.com/114.114.114.114
 server=/dayin.com/114.114.114.114
