accelerated-domains: add tcmer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78194,6 +78194,7 @@ server=/tcloudscdn.net/114.114.114.114
 server=/tcm100.com/114.114.114.114
 server=/tcm360.com/114.114.114.114
 server=/tcmdz.com/114.114.114.114
+server=/tcmer.com/114.114.114.114
 server=/tcmfrj.com/114.114.114.114
 server=/tcmmh.com/114.114.114.114
 server=/tcmwindow.com/114.114.114.114
