accelerated-domains: add emeok.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28750,6 +28750,7 @@ server=/emea.cdnetworks.com/114.114.114.114
 server=/emeiju.com/114.114.114.114
 server=/emeixs.com/114.114.114.114
 server=/emengju.com/114.114.114.114
+server=/emeok.com/114.114.114.114
 server=/emepu.com/114.114.114.114
 server=/emeratech.com/114.114.114.114
 server=/emergencyexit.xyz/114.114.114.114
