--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37897,6 +37897,7 @@ server=/gznict.com/114.114.114.114
 server=/gznotes.com/114.114.114.114
 server=/gznw.com/114.114.114.114
 server=/gznxbank.com/114.114.114.114
+server=/gznypfk.com/114.114.114.114
 server=/gzpeite.com/114.114.114.114
 server=/gzpeiyou.com/114.114.114.114
 server=/gzpfs.com/114.114.114.114
