--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39506,6 +39506,7 @@ server=/hd123.net/114.114.114.114
 server=/hd12333.com/114.114.114.114
 server=/hd199.com/114.114.114.114
 server=/hd199.net/114.114.114.114
+server=/hd2h.com/114.114.114.114
 server=/hd3p.com/114.114.114.114
 server=/hd8y.com/114.114.114.114
 server=/hdanheng.com/114.114.114.114
