accelerated-domains: add szlsnk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77296,6 +77296,7 @@ server=/szlinglewangluo.com/114.114.114.114
 server=/szlingsheng.com/114.114.114.114
 server=/szlnxh.com/114.114.114.114
 server=/szlottery.org/114.114.114.114
+server=/szlsnk.com/114.114.114.114
 server=/szltech.com/114.114.114.114
 server=/szltlh.com/114.114.114.114
 server=/szltwl.com/114.114.114.114
