accelerated-domains: add szqhtkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77376,6 +77376,7 @@ server=/szputy.com/114.114.114.114
 server=/szpxe.com/114.114.114.114
 server=/szqcz.com/114.114.114.114
 server=/szqf.org/114.114.114.114
+server=/szqhtkyy.com/114.114.114.114
 server=/szqiangu.com/114.114.114.114
 server=/szqinyuan.com/114.114.114.114
 server=/szqp.site/114.114.114.114
