accelerated-domains: add smuszsh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74770,6 +74770,7 @@ server=/smtvip.com/114.114.114.114
 server=/smucdn.com/114.114.114.114
 server=/smudc.com/114.114.114.114
 server=/smuszh.com/114.114.114.114
+server=/smuszsh.com/114.114.114.114
 server=/smvip8.com/114.114.114.114
 server=/smwd.tech/114.114.114.114
 server=/smwenxue.com/114.114.114.114
