accelerated-domains: add trylmr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80369,6 +80369,7 @@ server=/tryfun.com/114.114.114.114
 server=/tryine.com/114.114.114.114
 server=/tryineapp.com/114.114.114.114
 server=/trykan.com/114.114.114.114
+server=/trylmr.com/114.114.114.114
 server=/trymoka.com/114.114.114.114
 server=/tryudesk.com/114.114.114.114
 server=/tryurbest.com/114.114.114.114
