accelerated-domains: add jcrgyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46925,6 +46925,7 @@ server=/jcpeixun.com/114.114.114.114
 server=/jcpesz.com/114.114.114.114
 server=/jcqzw.com/114.114.114.114
 server=/jcrb.com/114.114.114.114
+server=/jcrgyy.com/114.114.114.114
 server=/jcsb.net/114.114.114.114
 server=/jcscp.org/114.114.114.114
 server=/jcsfs.com/114.114.114.114
