accelerated-domains: add amcaresz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10911,6 +10911,7 @@ server=/ambier.net/114.114.114.114
 server=/ambition-soft.com/114.114.114.114
 server=/ambow.com/114.114.114.114
 server=/amcarebsh.com/114.114.114.114
+server=/amcaresz.com/114.114.114.114
 server=/amcarewl.com/114.114.114.114
 server=/amcfortune.com/114.114.114.114
 server=/amchamchina.org/114.114.114.114
