accelerated-domains: add szyake.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77525,6 +77525,7 @@ server=/szxxtx.com/114.114.114.114
 server=/szxyfc.com/114.114.114.114
 server=/szxyjd.com/114.114.114.114
 server=/szxyxbkle.com/114.114.114.114
+server=/szyake.com/114.114.114.114
 server=/szyakeda.com/114.114.114.114
 server=/szyansai.com/114.114.114.114
 server=/szycil.com/114.114.114.114
