accelerated-domains: add szaoh.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77054,6 +77054,7 @@ server=/szaiten.com/114.114.114.114
 server=/szaixian.com/114.114.114.114
 server=/szajsj.com/114.114.114.114
 server=/szande.com/114.114.114.114
+server=/szaoh.org/114.114.114.114
 server=/szaojin.com/114.114.114.114
 server=/szas.com/114.114.114.114
 server=/szastcg.com/114.114.114.114
