accelerated-domains: add huaxiasz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42599,6 +42599,7 @@ server=/huaxianzhaopin.com/114.114.114.114
 server=/huaxiao5.com/114.114.114.114
 server=/huaxiaobaokeji.com/114.114.114.114
 server=/huaxiapawn.com/114.114.114.114
+server=/huaxiasz.com/114.114.114.114
 server=/huaxiataike.com/114.114.114.114
 server=/huaxiazi.com/114.114.114.114
 server=/huaxin303.com/114.114.114.114
