accelerated-domains: add pryk0755.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66027,6 +66027,7 @@ server=/prs-9hospital.com/114.114.114.114
 server=/prts.wiki/114.114.114.114
 server=/prttech.com/114.114.114.114
 server=/prxxff.com/114.114.114.114
+server=/pryk0755.com/114.114.114.114
 server=/przhushou.com/114.114.114.114
 server=/przwt.com/114.114.114.114
 server=/ps-boat.com/114.114.114.114
