accelerated-domains: add shoukangyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73275,6 +73275,7 @@ server=/shoujiwan.com/114.114.114.114
 server=/shoujixs.net/114.114.114.114
 server=/shoujixs.org/114.114.114.114
 server=/shoukala.com/114.114.114.114
+server=/shoukangyiyuan.com/114.114.114.114
 server=/shoulian.org/114.114.114.114
 server=/shoumaquan.com/114.114.114.114
 server=/shoumizhibo.com/114.114.114.114
