accelerated-domains: add szbhwk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77077,6 +77077,7 @@ server=/szbdyd.com/114.114.114.114
 server=/szbeilu.com/114.114.114.114
 server=/szbeilu888.com/114.114.114.114
 server=/szbelle.com/114.114.114.114
+server=/szbhwk.com/114.114.114.114
 server=/szbiu.com/114.114.114.114
 server=/szbnrj.com/114.114.114.114
 server=/szboehospital.com/114.114.114.114
