accelerated-domains: add szwfhp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77497,6 +77497,7 @@ server=/szwego.com/114.114.114.114
 server=/szweidi.com/114.114.114.114
 server=/szweijubao.com/114.114.114.114
 server=/szweita.com/114.114.114.114
+server=/szwfhp.com/114.114.114.114
 server=/szwfzs.com/114.114.114.114
 server=/szwgroup.com/114.114.114.114
 server=/szwhxy.com/114.114.114.114
