accelerated-domains: add ibodyhome.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44124,6 +44124,7 @@ server=/ibmfwqdl.com/114.114.114.114
 server=/ibmhz.com/114.114.114.114
 server=/ibmwclub.com/114.114.114.114
 server=/ibodao.com/114.114.114.114
+server=/ibodyhome.com/114.114.114.114
 server=/iboohee.com/114.114.114.114
 server=/ibook8.com/114.114.114.114
 server=/ibookba.com/114.114.114.114
