accelerated-domains: add mengarchitects.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58267,6 +58267,7 @@ server=/meng2u.com/114.114.114.114
 server=/meng3.com/114.114.114.114
 server=/meng800.com/114.114.114.114
 server=/mengaite.com/114.114.114.114
+server=/mengarchitects.com/114.114.114.114
 server=/mengat.com/114.114.114.114
 server=/mengbige.com/114.114.114.114
 server=/mengchenghui.com/114.114.114.114
