accelerated-domains: add 39ghw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3900,6 +3900,7 @@ server=/39dg.com/114.114.114.114
 server=/39ej7e.com/114.114.114.114
 server=/39fei.com/114.114.114.114
 server=/39fengliao.com/114.114.114.114
+server=/39ghw.com/114.114.114.114
 server=/39h83s.com/114.114.114.114
 server=/39health.com/114.114.114.114
 server=/39jks.com/114.114.114.114
