accelerated-domains: add xcgwk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87520,6 +87520,7 @@ server=/xcgogo.club/114.114.114.114
 server=/xcgogo.site/114.114.114.114
 server=/xcgp.com/114.114.114.114
 server=/xcgui.com/114.114.114.114
+server=/xcgwk.com/114.114.114.114
 server=/xcharger.net/114.114.114.114
 server=/xchjw.org/114.114.114.114
 server=/xchuandai.com/114.114.114.114
