accelerated-domains: add youmian99.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94071,6 +94071,7 @@ server=/youmenr.com/114.114.114.114
 server=/youmew.com/114.114.114.114
 server=/youmi.net/114.114.114.114
 server=/youmiad.com/114.114.114.114
+server=/youmian99.com/114.114.114.114
 server=/youmiaoyigou.com/114.114.114.114
 server=/youmideer.com/114.114.114.114
 server=/youmindao.com/114.114.114.114
