accelerated-domains: add zhongxuyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97794,6 +97794,7 @@ server=/zhongxuewuyou.net/114.114.114.114
 server=/zhongxuewy.net/114.114.114.114
 server=/zhongxunrunda.com/114.114.114.114
 server=/zhongxuntv.com/114.114.114.114
+server=/zhongxuyiyuan.com/114.114.114.114
 server=/zhongyangkeji.com/114.114.114.114
 server=/zhongyangweixiu.com/114.114.114.114
 server=/zhongyaoyi.com/114.114.114.114
