accelerated-domains: add szftfybj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77173,6 +77173,7 @@ server=/szfiu.com/114.114.114.114
 server=/szfjt.com/114.114.114.114
 server=/szfolo.com/114.114.114.114
 server=/szforter.com/114.114.114.114
+server=/szftfybj.com/114.114.114.114
 server=/szfty.net/114.114.114.114
 server=/szfutong.com/114.114.114.114
 server=/szfuture.com/114.114.114.114
