accelerated-domains: add yiyuanzhaopin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93244,6 +93244,7 @@ server=/yiyuanqiang.net/114.114.114.114
 server=/yiyuansoft.com/114.114.114.114
 server=/yiyuantian.com/114.114.114.114
 server=/yiyuanyi.org/114.114.114.114
+server=/yiyuanzhaopin.com/114.114.114.114
 server=/yiyukj.com/114.114.114.114
 server=/yiyum.com/114.114.114.114
 server=/yiyun518.com/114.114.114.114
