accelerated-domains: add sztreeent.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77483,6 +77483,7 @@ server=/sztljyjt.com/114.114.114.114
 server=/sztmjz.com/114.114.114.114
 server=/sztncm.com/114.114.114.114
 server=/sztopbrand.com/114.114.114.114
+server=/sztreeent.com/114.114.114.114
 server=/sztspi.com/114.114.114.114
 server=/sztuozen.com/114.114.114.114
 server=/sztxcpa.com/114.114.114.114
