accelerated-domains: add cmersz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21184,6 +21184,7 @@ server=/cmeii.com/114.114.114.114
 server=/cmejob.com/114.114.114.114
 server=/cmelr.com/114.114.114.114
 server=/cmenergyshipping.com/114.114.114.114
+server=/cmersz.com/114.114.114.114
 server=/cmes.org/114.114.114.114
 server=/cmf.biz/114.114.114.114
 server=/cmf.ltd/114.114.114.114
