accelerated-domains: add szjlfck.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77265,6 +77265,7 @@ server=/szjitu.com/114.114.114.114
 server=/szjkhd.com/114.114.114.114
 server=/szjkp.com/114.114.114.114
 server=/szjkyun.com/114.114.114.114
+server=/szjlfck.com/114.114.114.114
 server=/szjlkt.com/114.114.114.114
 server=/szjlwul.com/114.114.114.114
 server=/szjtfw.com/114.114.114.114
