accelerated-domains: add szcmer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77114,6 +77114,7 @@ server=/szchunqiu.com/114.114.114.114
 server=/szclbxf.com/114.114.114.114
 server=/szcleanair.com/114.114.114.114
 server=/szclxzx.com/114.114.114.114
+server=/szcmer.com/114.114.114.114
 server=/szcno.com/114.114.114.114
 server=/szcogo.com/114.114.114.114
 server=/szcompare.com/114.114.114.114
